docs: add ebnf grammar rules to the readme

--- a/compiler/README.org
+++ b/compiler/README.org
@@ -17,3 +17,14 @@ function_definition = Function(identifier name, statement body)
 statement = Return(exp)
 exp = Constant(int)
 #+END_SRC
+
+* EBNF
+
+#+BEGIN_SRC
+<program> ::= <function>
+<function> ::= "int" <identifier> "(" "void" ")" "{" <statement> "}"
+<statement> ::= "return" <exp> ";"
+<exp> ::= <int>
+<identifier> ::= ? An identifier token ?
+<int> ::= ? A constant token ?
+#+END_SRC
